--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-sunvox (1.9.4c-0utopia1) unstable; urgency=medium
+sunvox (1.9.4c+repack-0utopia1) unstable; urgency=medium
 
-  * Initial release
+  * Initial release.
 
  -- James Lu <james@overdrivenetworks.com>  Sat, 12 Oct 2019 20:49:26 -0700
