--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sunvox (2.1c+repack-0utopia1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- James Lu <james@overdrivenetworks.com>  Sun, 26 Mar 2023 00:19:21 -0700
+
 sunvox (2.0e+repack-0utopia1) unstable; urgency=medium
 
   * New upstream release, minor tweaks to package layout.
